<resources>
    <string name="app_name">Deluxlight</string>

    <string name="title_home">Demo</string>
    <string name="title_more">More</string>
    <string name="title_doodle">Graffiti</string>
    <string name="title_equipment">Device</string>

    <string name="painter">Graffiti color</string>
    <string name="lamp_pattern">Delightlux Demo</string>


    <string name="equipment_name">mode name</string>
    <string name="save">保存</string>
    <string name="clean">擦除</string>
    <string name="twinkle">闪烁</string>
    <string name="bold_paint">粗笔</string>
    <string name="thin_paint">细笔</string>
    <string name="refresh">Device refresh</string>
    <string name="about_us">about us</string>
    <string name="exit">exit</string>
    <string name="open">light switch</string>
    <string name="timer">on off timer</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email</string>
    <string name="email_hint">please enter email</string>
    <string name="password">Password</string>
    <string name="pass_setting_hint">Password(min 8 chars)</string>
    <string name="pass_hint">please enter password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="to_register">Join Free</string>
    <string name="no_account">还没账号？</string>
    <string name="third">第三方登录</string>
    <string name="user_name">Full Name</string>
    <string name="user_name_hint">Full Name</string>
    <string name="email">Email</string>
    <string name="sure_password">Password</string>
    <string name="sure_password_hint">Confirm Password</string>
    <string name="register_protocol">《注册协议》</string>
    <string name="register_protocol_title">注册协议</string>
    <string name="has_read">我已阅读</string>
    <string name="sure_register">SIGN UP</string>
    <string name="sure_forget">Confirm Recovery</string>
    <string name="register">Registration</string>
    <string name="forget">Forgot Password</string>
    <string name="code">get code</string>
    <string name="code_hint">code</string>
    <string name="get_code">get code</string>
    <string name="protocol">协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容协议内容</string>
    <string name="about_us_content">Deluxlight is a companion App for Deluxlight products, the App can identify in many types of Deluxlight products, such as Christmas tree lights, mesh lights, and wincurt lights, etc. You can decorate your home with several different products and operate all of them on one phone! Not only on Christmas, Deluxlight can be use at every festival with different lighting effect. It is an open App for all the user who has partnership with Deluxlight. You can also create your own effect and apply it on the lights, which is very suitable for the person who has great imagination and creativity. Once you connect Deluxlight product to your smart device, you can begin your beautiful journey of Deluxlight! Make your house gorgeous again!</string>
    <string name="phone">Deluxlight</string>
    <string name="mirror">镜像</string>
    <string name="save_success">Save success</string>
    <string name="time_open">on</string>
    <string name="time_close">off</string>
    <string name="time_open_close">on off timer</string>
    <string name="cancel">cancel</string>
    <string name="sure">sure</string>
    <string name="welcome">欢迎来到灯饰软件</string>
    <string name="next">NEXT STEP</string>

    <string name="edit">Edit</string>
    <string name="apply">Apply</string>


    <string name="facebook_app_id">Your App Id</string>
    <string name="fb_login_protocol_scheme">Your App Scheme</string>


</resources>
