<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f5f5f5"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/white_r10_bg"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"></TextView>

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/user_name_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_15"
                    android:textColor="@color/color_33"
                    android:textColorHint="@color/c999999"
                    android:textSize="@dimen/sp_16" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/dp_100"
                    android:background="@color/f5f5f5" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"></TextView>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_15"
                    android:textColor="@color/color_33"
                    android:textColorHint="@color/c999999"
                    android:textSize="@dimen/sp_16" />

            </TableRow>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@drawable/white_r10_bg"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"></TextView>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/pass_setting_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_15"
                    android:textColor="@color/color_33"
                    android:textColorHint="@color/c999999"
                    android:textSize="@dimen/sp_16" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/dp_100"
                    android:background="@color/f5f5f5" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/sure_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"></TextView>

                <EditText
                    android:id="@+id/sure_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/sure_password_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_15"
                    android:textColor="@color/color_33"
                    android:textColorHint="@color/c999999"
                    android:textSize="@dimen/sp_16" />

            </TableRow>


        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:background="@drawable/xuanzekuangmoren"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/has_read"
                android:textColor="@color/color_33"
                android:textSize="@dimen/sp_16"></TextView>

            <TextView
                android:id="@+id/tv_register_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/register_protocol"
                android:textColor="@color/app_blue"
                android:textSize="@dimen/sp_16"></TextView>
        </TableRow>

        <com.wya.uikit.button.WYAButton
            android:id="@+id/but_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:padding="@dimen/dp_10"
            android:text="@string/sure_register"
            android:textSize="@dimen/sp_18"
            app:buttonBackGroundColor="@color/app_blue"
            app:buttonBackGroundColorPress="@color/app_blue"
            app:buttonFillet="true"
            app:buttonRadius="10dp"
            app:buttonTextColor="@color/white" />

    </LinearLayout>

</LinearLayout>